# datacebo-be

./: .gitignore  README.md  pyproject.toml
app/: main.py  startup.py
app/core/: settings.py
app/models/: event.py  package.py  user.py
app/routers/: auth.py  events.py  licenses.py  packages.py  store.py  users.py
app/schemas/: auth.py  balance.py  event.py  license.py  package.py
app/security/: deps.py  jwt_tokens.py  passwords.py
app/services/: store.py
tests/: test_auth.py  test_events.py  test_licenses_and_packages.py  test_security_and_errors.py  test_store_integration.py  test_unit_licenses.py  test_unit_store.py
