[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacebo-be"
version = "0.1.0"
description = "FastAPI app with auth (access token JSON, refresh cookie)"
authors = [{ name = "You" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.20",
  "pydantic[email]>=2.5.0",
  "pydantic-settings>=2.2.1",
  "passlib[bcrypt]>=1.7.4",
  "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
packages = { find = { namespaces = true, include = ["app*"] } }

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
